--- a/src/pages/doc/[slug].astro
+++ b/src/pages/doc/[slug].astro
@@ -1,7 +1,7 @@
 ---
 import { contentfulClient } from "../../lib/contentful";
 import { documentToHtmlString } from "@contentful/rich-text-html-renderer";
-
+import Layout from "../../layouts/Layout.astro";
 import type { DocPost } from "../../lib/contentful";
 
 export async function getStaticPaths() {
@@ -10,9 +10,10 @@ export async function getStaticPaths() {
   });
 
   const pages = entries.items.map((item) => ({
-    params: { slug: item.fields.title },
+    params: { slug: item.fields.slug },
     props: {
       title: item.fields.title,
+      slug: item.fields.slug,
       category: item.fields.category,
       description: item.fields.description,
       content: documentToHtmlString(item.fields.content),
@@ -23,14 +24,6 @@ export async function getStaticPaths() {
 }
 const { content, title, date } = Astro.props;
 ---
-<html lang="en">
-  <head>
-    <title>{title}</title>
-  </head>
-  <body>
-    <h1>{title}</h1>
-    <time>{date}</time>
-    <article set:html={content} />
-  </body>
-</html>
-
+<Layout>
+  <article set:html={content} />
+</Layout>
