--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
-
-import { DocPost, contentfulClient } from "../lib/contentful";
+import "../global.css"
+import { contentfulClient, type DocPost } from "../lib/contentful";
 
 const entries = await contentfulClient.getEntries<DocPost>({
   content_type: "knowledgeBase",
@@ -26,7 +26,7 @@ const posts = entries.items.map((item) => {
   <body class="flex h-screen bg-gray-100">
     <!-- Sidebar -->
     <div class="bg-white w-64 p-4 space-y-4">
-        <h1 class="font-bold text-xl">Docs Menu</h1>
+        <h1 class="font-bold text-xl">Navigation</h1>
         <nav>
             <ul class="space-y-2">
               {posts.map((post) => (
