--- a/src/pages/doc/[slug].astro
+++ b/src/pages/doc/[slug].astro
@@ -1,8 +1,9 @@
 ---
 import { contentfulClient } from "../../lib/contentful";
 import { documentToHtmlString } from "@contentful/rich-text-html-renderer";
-import { BLOCKS, MARKS } from '@contentful/rich-text-types';
+import { BLOCKS, MARKS, V1_NODE_TYPES } from '@contentful/rich-text-types';
 
+import RenderContent from "../../components/RenderContent.Astro";
 import Layout from "../../layouts/Layout.astro";
 import type { DocPost } from "../../lib/contentful";
 
@@ -30,18 +31,25 @@ const options = {
       slug: item.fields.slug,
       category: item.fields.category,
       description: item.fields.description,
-      content: documentToHtmlString(item.fields.content, options),
+      content: item.fields.content,
+      // content: documentToHtmlString(item.fields.content, options),
       tags: item.fields.tags,
     },
   }));
   return pages;
 }
-const { content, title } = Astro.props;
+
+
+const { title, content } = Astro.props;
+
 ---
 <Layout>
   <div class="space-y-4">
     <h1 class="text-2xl">{title}</h1>
-    <article set:html={content} />
+    <article class="space-y-8">
+      <RenderContent content={content} />
+    </article>
+
   </div>
   
 </Layout>
