--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -82,7 +82,7 @@ const templatePosts = entries.items.filter((item) => {
     <div class="max-w-7xl w-full">
       <div class="flex flex-grow h-[calc(100vh-81px)]">
         <!-- Sidebar -->
-        <div class="bg-white w-64 p-4 space-y-4 border-r-2 pt-8">
+        <div class="bg-white w-64 p-4 space-y-4 border-r pt-8">
           <nav>
             <ul class="menu rounded-box space-y-1">
               <li class="font-semibold">
