--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -85,7 +85,7 @@ const orgnaizationPosts = entries.items.filter((item) => {
     
   </header>
     <div class="max-w-7xl w-full">
-      <div class="flex flex-grow h-[calc(100vh-81px)]">
+      <div class="flex flex-grow min-h-[calc(100vh-81px)]">
         <!-- Sidebar -->
         <div class="bg-white w-64 p-4 space-y-4 border-r pt-8">
           <nav>
@@ -115,10 +115,7 @@ const orgnaizationPosts = entries.items.filter((item) => {
 
         <!-- Content -->
         <div class="flex-1 p-10">
-          <article>
-            <slot />
-            <!-- your content is injected here -->
-          </article>
+          <slot />
         </div>
       </div>
     </div>
