--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -77,7 +77,7 @@ const orgnaizationPosts = entries.items.filter((item) => {
         <a href="https://app.cvtoblind.com" class="btn btn-ghost btn-sm text-gray-500">
           Go to App
         </a>
-        <a href="hello@cvtoblind.com" class="btn btn-ghost btn-sm text-gray-500">
+        <a href="mailto:hello@cvtoblind.com" class="btn btn-ghost btn-sm text-gray-500">
           Contact Us
         </a>
       </div>
