--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -42,6 +42,11 @@ const orgnaizationPosts = entries.items.filter((item) => {
   return category === "Organizations";
 }).sort((a, b) => a.fields.order - b.fields.order).map(mapToProps);
 
+const apiPosts = entries.items.filter((item) => {
+  const { category } = item.fields;
+  return category === "API";
+}).sort((a, b) => a.fields.order - b.fields.order).map(mapToProps);
+
 ---
 
 <html lang="en">
@@ -108,7 +113,12 @@ const orgnaizationPosts = entries.items.filter((item) => {
                 </a>
               </li>
               <SidebarLink posts={orgnaizationPosts}               />
-              
+              <li class="font-semibold">
+                <a href="#">
+                  REST API
+                </a>
+              </li>
+              <SidebarLink posts={apiPosts}               />
             </ul>
           </nav>
         </div>
